# TraitRELAX

./: AUTHORS  CMakeLists.txt  Dockerfile  INSTALL  README.md  Singularity  TraitRELAX_dev_notes.txt  TraitRELAX_template.bpp  buildBin.sh  install.sh  package.cmake.in  parametricBootstrapTest.py  traitrelax.spec
Examples/: README.txt  example1.bpp  example2.bpp  simulate.bpp
Examples/data/example1/: character_data.fas  res1_full_log.txt  sequence_data.fas  tree.nwk
Examples/data/example2/: base_optimization_output.res  base_optimization_steps.res  base_parameter_estimates.res  character_data.fas  res1_full_log.txt  sequence_data.fas  tree.nwk
Examples/data/simulation_output/: character_data.fas  labeled_trait_history.nwk  sequence_data.fas  unlabeled_trait_history.nwk
Tests/: test_by_diff.py
TraitRELAX/: CMakeLists.txt  Simulator.cpp  TraitRELAX.cpp
doc/: CMakeLists.txt  traitrelax.texi
lib/: CMakeLists.txt  TraitRELAXManager.cpp  TraitRELAXManager.h
man/: CMakeLists.txt  traitrelax.1
utils/: parametricBootstrapParser.py
